# cerberus

./: .gitignore  LICENSE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: workflow.yaml
api/: .gitignore  README.md  celerybeat-schedule.db  pyproject.toml
api/apps/core/: models.py  urls.py
api/apps/players/: admin.py  models.py  tasks.py  urls.py  utils.py
api/apps/players/api/v1/: filters.py  serializers.py  urls.py  views.py
api/apps/players/management/commands/: save_players.py  seed_database.py
api/apps/players/migrations/: 0001_initial.py  0002_alter_playerteam_player_alter_playerteam_team.py  0003_alter_player_image.py  0004_player_email_player_hltv_player_twitter.py  0005_nationality_player_faceit_alter_player_hltv_and_more.py  0006_player_nationality.py  0007_remove_player_nationality_player_nationality.py  0008_alter_player_email.py  0009_alter_nationality_flag.py  0010_team_image.py  0011_player_statistics.py
api/apps/statistics/faceit/: utils.py
api/apps/statistics/hltv/: utils.py
api/config/: settings.py  urls.py
api/deployments/: docker-compose.prod.yml  docker-compose.yml
api/deployments/django-project/: Dockerfile
api/deployments/drf-project/: Dockerfile
api/deployments/react-app/: Dockerfile  Dockerfile.prod
api/tests/example_api/: test_views.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/conf/: default.conf  init.sh
frontend/public/: index.html
frontend/src/: App.js  App.jsx  utils.js
frontend/src/assets/styles/: index.css  tailwind.css
frontend/src/components/: DefaultNavbar.js  Pagination.js
frontend/src/components/landing/: Header.js  WorkingSection.js
frontend/src/components/players/: ContentTable.js  Filter.js  SkeletonTable.js  Table.js
frontend/src/components/players/filter/: Filter.js  FilterContainer.js  Search.js
frontend/src/components/profile/: Content.js  Graph.js
frontend/src/pages/: Players.js  Profile.js
