[tool.poetry]
name = "Cerberus"
version = "0.1.0"
description = "API for tracking csgo players, tournaments, etc."
authors = ["Milos Nikic <milos.nikic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-extensions = "^3.2.0"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
environs = "^9.5.0"
psycopg2 = "^2.9.3"
Pillow = "^9.3.0"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"
python-dateutil = "^2.8.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
celery = "^5.2.7"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
drf-spectacular = "^0.23.1"
pylint-django = "^2.5.3"
pylint = "^2.15.0"
black = "^22.8.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool specific settings

[tool.pylint.main]
ignore = ["urls.py", "apps.py", "manage.py", "local.py", "tests", "config.local", ".venv", "migrations"]

[tool.pylint.message_control]
disable = [
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-locals",
  "invalid-name",
  "no-member",
  "missing-module-docstring",
  "too-many-branches",
  "too-many-statements",
  "too-many-nested-blocks",
]

[tool.mypy]
ignore_missing_imports = true
exclude = ["config/", "urls.py",]

[tool.isort]
skip = ["migrations", ".venv"]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
  \.mypy_cache
  | migrations
  | .venv
)/
'''